# immutable-yaml

./: CMakeLists.txt  Dockerfile  README.md  immutable-data-embedder.pc.in  package.xml
 include/yaml/: yaml.hpp
.github/workflows/: ci.yml
cmake/: DataEmbed.cmake  YamlEmbed.cmake  data_embed_generate.cmake  immutable-data-embedderConfig.cmake.in  immutable-yamlConfig.cmake.in  yaml_embed_generate.cmake
examples/: CMakeLists.txt  app_config.yaml  basic.cpp  embed.cpp  iterate.cpp  json_basic.cpp  toml_basic.cpp  xml_basic.cpp
fuzz/: CMakeLists.txt  fuzz_json.cpp  fuzz_toml.cpp  fuzz_xml.cpp  fuzz_yaml.cpp
fuzz/corpus/json/: nested.json  simple.json
fuzz/corpus/toml/: simple.toml
fuzz/corpus/xml/: simple.xml
fuzz/corpus/yaml/: nested.yaml  simple.yaml
include/immutable_data/: embed.hpp  json.hpp  toml.hpp  version.hpp  xml.hpp  yaml.hpp
include/immutable_data/detail/: json_lexer.hpp  json_parser.hpp  string_storage.hpp  toml_lexer.hpp  toml_parser.hpp  types.hpp  utils.hpp  xml_parser.hpp  yaml_lexer.hpp  yaml_parser.hpp
include/immutable_yaml/: embed.hpp  immutable_yaml.hpp
include/immutable_yaml/detail/: lexer.hpp  parser.hpp  string_storage.hpp  types.hpp
include/yaml/: embed.hpp  yaml.hpp
include/yaml/detail/: lexer.hpp  parser.hpp  types.hpp  utils.hpp
test/: CMakeLists.txt  app_config.xml  app_settings.toml  edge_comments.yaml  edge_long_strings.yaml  edge_many_items.yaml  edge_nested.yaml  edge_sequences.yaml  edge_types.yaml  sample_config.yaml  settings.json  test_constexpr.cpp  test_edge_cases.cpp  test_embed.cpp  test_json_parse.cpp  test_main.cpp  test_negative.cpp  test_parse.cpp  test_safety.cpp  test_toml_parse.cpp  test_xml_parse.cpp  test_yaml_parse.cpp
tests/: CMakeLists.txt  test_main.cpp  test_negative.cpp
